# devman_homework_checker

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
