[tool.poetry]
name = "devman-homework-checker"
version = "0.1.0"
description = ""
authors = ["Viktor Shvajkovskij <viktor.shv1995@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"

python-telegram-bot = "13.13"
requests = "2.28.1"
python-dotenv = "0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
